--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,4 @@
-<!doctype html>
-<html class="no-js" lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-  </head>
-  <body>
-    <div class="grid-container">
+{% include header.html %}
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
           <h1>{{ page.title }}</h1>
@@ -19,11 +8,4 @@
       <section>
         {{ content }}
       </section>
-
-      <script src="js/vendor/jquery.js"></script>
-      <script src="js/vendor/what-input.js"></script>
-      <script src="js/vendor/foundation.js"></script>
-      <script src="js/app.js"></script>
-    </div>
-  </body>
-</html>
+{% include footer.html %}
