--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 
 
-<script src="js/vendor/jquery.js"></script>
-<script src="js/vendor/what-input.js"></script>
-<script src="js/vendor/foundation.js"></script>
-<script src="js/app.js"></script>
+<script src="{{ site.url }}/js/vendor/jquery.js"></script>
+<script src="{{ site.url }}/js/vendor/what-input.js"></script>
+<script src="{{ site.url }}/js/vendor/foundation.js"></script>
+<script src="{{ site.url }}/js/app.js"></script>
 </div>
 </body>
 </html>
