--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 {% include header.html %}
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
+          <a href="{{ site.url }}"> &#60; Back </a>
           <h1>{{ page.title }}</h1>
         </div>
       </div>
