adding class with layout name

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,5 +8,5 @@
     <link rel="stylesheet" href="{{ site.url }}/css/foundation.css">
     <link rel="stylesheet" href="{{ site.url }}/css/app.css">
   </head>
-  <body>
+  <body class=" {{ layout.name }} ">
     <div class="grid-container">
