speech bubble height set to content

--- a/css/app.scss
+++ b/css/app.scss
@@ -26,6 +26,10 @@ body{
 /*---- Speech Bubbles from https://leaverou.github.io/bubbly/ ---*/
 
 // speech bubble definition
+.speech-container{
+  align-items: flex-start;
+}
+
 .speech{
   background-color: $colorBubble;
   padding: 1em;
