added divs for speakers, alt approach

--- a/css/app.scss
+++ b/css/app.scss
@@ -53,7 +53,7 @@ body{
 }
 
 .voice-kepler:after{
-  margin-left: -.5em;
+  margin-left: -1em;
   border-left: 0;
   left: .5em;
 }
@@ -65,7 +65,7 @@ body{
 
 
 .voice-emandm:after{
-  margin-right: -.5em;
+  margin-right: -1em;
   border-right: 0;
   right: .5em;
 }
