restructured html and classes in attribution

--- a/css/app.scss
+++ b/css/app.scss
@@ -34,10 +34,15 @@ body{
   align-self: flex-start;
 }
 
-.speech:after{
-  content: '';
+.speaker{
   position: sticky;
   bottom: 0;
+}
+
+.speaker:before{
+  content: '';
+  position: sticky;
+  top: 0;
   width: 0;
   height: 0;
   border: 1em solid transparent;
@@ -52,7 +57,7 @@ body{
   @include border-radius(1em 1em 1em 0);
 }
 
-.voice-kepler:after{
+.speaker-kepler:before{
   margin-left: -1em;
   border-left: 0;
   left: .5em;
@@ -63,8 +68,7 @@ body{
   text-align: right;
 }
 
-
-.voice-emandm:after{
+.speaker-emandm:before{
   margin-right: -1em;
   border-right: 0;
   right: .5em;
