attribution alignment mostly set - configuring bubble placement

--- a/css/app.scss
+++ b/css/app.scss
@@ -39,6 +39,11 @@ body{
   bottom: 0;
 }
 
+.bubble{
+  height: 2em;
+  background-color: #0f0;
+}
+
 .bubble:after{
   content: '';
   position: absolute;
