--- a/css/app.scss
+++ b/css/app.scss
@@ -46,6 +46,7 @@ body{
   padding: 1em;
   position: relative;
   align-self: flex-start;
+  @include border-radius(1em 1em 0 0);
 }
 
 .speech p:last-child{
@@ -113,4 +114,12 @@ body{
 
 .voice-emandm p{
   text-align:left;
+}
+
+.voice-kepler .bubble{
+  @include border-radius(0 0 1em 0);
+}
+
+.voice-emandm .bubble{
+  @include border-radius(0 0 0 1em);
 }
