--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ site.url }}/css/foundation.css">
-    <link rel="stylesheet" href="{{ site.url }}/css/app.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/foundation.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css">
   </head>
   <body class=" {{ layout.name }} ">
     <div class="grid-container">
