--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,12 +8,12 @@ name: home
       </section>
       <section>
           {% for post in site.posts %}
-              <a href="{{ post.url }}">
+              <a href="{{ site.baseurl }}{{ post.url }}">
                 <h2>{{ post.title }}</h2>
               </a>
               {{ post.excerpt }}
               <br />
-              <a href="{{ post.url }}">
+              <a href="{{ site.baseurl }}{{ post.url }}">
                 Read more...
               </a>
           {% endfor %}
