--- a/css/app.scss
+++ b/css/app.scss
@@ -22,7 +22,7 @@ $colorBackgroundTransparent: #fff0;
 // global styilng
 
 body{
-  padding: 1em 0 0 0;
+  padding: 1em 0;
 }
 
 .more{
@@ -70,9 +70,28 @@ body{
   z-index: inherit;
 }
 
+/*
+.bubble::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  background-color: #f00;
+  height: $textFadeHeight;
+  width: 100%;
+}
+
+.attribution::after{
+  content: '';
+  position: absolute;
+  top: $textFadeHeight;
+  background-color: #0f0
+  height: 100%;
+  width: 100%;
+}
+*/
+
 .speaker{
   background-color: $colorBackground;
-  padding-top: 1em;
 }
 
 .bubble::after{
