--- a/_includes/attribution-kepler.html
+++ b/_includes/attribution-kepler.html
@@ -4,6 +4,8 @@
   <div class="bubble">
   </div>
   <div class="speaker">
-    <img src="{{ site.baseurl }}/img/kepler-speech.png" width="49" height="45">
+    <a href="{{ site.baseurl }}/blub.html">
+      <img src="{{ site.baseurl }}/img/kepler-speech.png" width="49" height="45">
+    </a>
   </div>
 </div>
