attempt at multiple permalinks using redirect-from plugin - adjusted keplerr link

--- a/_includes/attribution-kepler.html
+++ b/_includes/attribution-kepler.html
@@ -4,7 +4,7 @@
   <div class="bubble">
   </div>
   <div class="speaker">
-    <a href="{{ site.baseurl }}/blub.html">
+    <a href="blub.html">
       <img src="{{ site.baseurl }}/img/kepler-speech.png" width="49" height="45">
     </a>
   </div>
