--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ name: page
 {% include header.html %}
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
-          <a href="#" onclick="history.back();"> &#60; Back </a>
+          <a href="post.html"> &#60; Back </a>
           <h1>{{ page.title }}</h1>
         </div>
       </div>
