--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ name: post
 {% include header.html %}
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
-          <a href="{{ site.baseurl }}/index.html"> &#60; Back </a>
+          <a href="{{ site.baseurl }}/index.html"> &#60; Home </a>
           <h1>{{ page.title }}</h1>
         </div>
       </div>
