scaling kepler greeting image

--- a/css/app.scss
+++ b/css/app.scss
@@ -37,7 +37,9 @@ body{
 #kepler-greeting{
   float: left;
   display: inline-block;
+  width: 13%;
   min-width: 3.3em;
+  padding: 0 .5em .5em 0;
 }
 
 section {
