--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,14 +8,15 @@ name: home
       </section>
       <section>
           {% for post in site.posts %}
+            <div class="index-excerpt">
               <a href="{{ site.baseurl }}{{ post.url }}">
                 <h2>{{ post.title }}</h2>
               </a>
               {{ post.excerpt }}
-              <br />
               <a href="{{ site.baseurl }}{{ post.url }}">
                 Read more...
               </a>
+            </div>
           {% endfor %}
       </section>
 {% include footer.html %}
