beginning content for kitchen

--- a/css/app.scss
+++ b/css/app.scss
@@ -51,6 +51,10 @@ section {
   clear: both;
 }
 
+div.index-excerpt{
+  margin-bottom: 1em;
+}
+
 /*---- Speech Bubbles from https://leaverou.github.io/bubbly/ ---*/
 // speech bubble definition
 
