--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,7 @@ name: home
       <section>
         {{ content }}
       </section>
+      <hr >
       <section>
           {% for post in site.posts %}
             <div class="index-excerpt">
@@ -17,6 +18,17 @@ name: home
                 Read more...
               </a>
             </div>
+            <hr >
           {% endfor %}
+      </section>
+      <section>
+        <div class="grid-x grid-margin-x excerpt">
+          <div class="cell small-12 medium-8 large-9">
+            <p>Have a happy and joyful holiday season, and I’ll see you in the New Year!
+            <br >
+            - Kepler &#128008;
+            </p>
+          </div>
+        </div>
       </section>
 {% include footer.html %}
