--- a/_includes/blub.html
+++ b/_includes/blub.html
@@ -18,4 +18,7 @@
     <div class="cell small-0 medium-3 large-3">
     </div>
 </div>
+<div id="snail-container" class="moved">
+  <img src="{{site.baseurl}}/img/snail.png" id="snail" width="90" height="66">
+</div>
 <!-- snail photo credit: Brian Boucheron https://www.flickr.com/photos/bert_m_b/318912986/in/photolist-ubvHL-3bu9hH-x27QV-9p5if5-9CkjyY-757gz-nYcagW-7RdoFi-6KakTz-nHK7ZF-dY5Jxn-aooQCt-poXoro-dKQkdm-2rdzfx-27RJMSy-aorBi9-dD5Qmf-ydnng-o326cM-43udw-nZWwZ8-2KAkda-nZWwWn-vLJ2r-bauWyZ-qsnLwo-2KE8gE-73DCC5-rEg1eV-6eZn8S-ppK3cT-72A5wt-C3C5Ki-ydnDh-7rXtaj-5GgxLH-4VRk4F-6nDLNn-ULCGse-axUzh-4mp8BG-XtL2Rg-3ac9x-3acMo-2qaBm-6eZnEY-aB7J59-dCZsXR-4Kk7gF via Creative Commons Attribution 2.0 Generic license https://creativecommons.org/licenses/by/2.0/-->
