--- a/css/app.scss
+++ b/css/app.scss
@@ -28,6 +28,7 @@ $colorCaption: $colorSpeechText;
 
 body{
   padding: 1em 0 0 0;
+  position: relative;
 }
 
 .more{
@@ -118,7 +119,6 @@ div.index-excerpt{
 .attribution{
   position: sticky;
   bottom: 0;
-  //background: linear-gradient($colorBackgroundTransparent $textFadeHeight,$colorBackground $textFadeHeight);
   z-index: 2;
 }
 
@@ -195,4 +195,25 @@ body.page{
 
 .page .speaker{
   background-color: $colorBlubBackground;
+}
+
+#snail-container{
+  position: fixed;
+  bottom: -10px;
+  right: -90px;
+  z-index: 3;
+}
+
+#snail-container.moved{
+  animation-duration: 10s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    right: -90px;
+  }
+  to {
+    right: 100vw;
+  }
 }
