--- a/_includes/attribution-lightning.html
+++ b/_includes/attribution-lightning.html
@@ -4,6 +4,8 @@
   <div class="bubble">
   </div>
   <div class="speaker">
-    <img src="{{ site.baseurl }}/img/lightning.png" id="lightning" width="108" height="110">
+    <a href="#">
+      <img src="{{ site.baseurl }}/img/lightning.png" id="lightning" width="108" height="110">
+    </a>
   </div>
 </div>
