--- a/css/app.scss
+++ b/css/app.scss
@@ -202,10 +202,12 @@ body.page{
   bottom: -10px;
   right: -90px;
   z-index: 3;
-  transition: right 10s;
+  width: 90px;
+  transition: right 0s;
 }
 
 #snail-container.moved{
   right: 100vw;
   width: 90px;
+  transition: right 60s;
 }
